@@ -54,7 +54,8 @@ def get(key):
     subp = subprocess.Popen(['gconftool-2', '--config-source', _gconf_dir(),
                              '--get', key],
                             stdout=subprocess.PIPE, stderr=subprocess.PIPE,
-                            preexec_fn=misc.drop_all_privileges)
+                            preexec_fn=misc.drop_all_privileges,
+                            universal_newlines=True)
     return subp.communicate()[0].rstrip('\n')
 
 def get_list(key):
@@ -65,7 +66,8 @@ def get_list(key):
     subp = subprocess.Popen(['gconftool-2', '--config-source', gconf_dir,
                              '--get-list-size', key],
                             stdout=subprocess.PIPE, stderr=subprocess.PIPE,
-                            preexec_fn=misc.drop_all_privileges)
+                            preexec_fn=misc.drop_all_privileges,
+                            universal_newlines=True)
     size = subp.communicate()[0].rstrip('\n')
     try:
         size = int(size)
@@ -77,7 +79,8 @@ def get_list(key):
         subp = subprocess.Popen(['gconftool-2', '--config-source', gconf_dir,
                                  '--get-list-element', key, str(i)],
                                 stdout=subprocess.PIPE, stderr=subprocess.PIPE,
-                                preexec_fn=misc.drop_all_privileges)
+                                preexec_fn=misc.drop_all_privileges,
+                                universal_newlines=True)
         elements.append(subp.communicate()[0].rstrip('\n'))
 
     return elements
