@@ -41,7 +41,9 @@ def get_vendor_and_model(udi):
     model = ''
     cmd = ['/sbin/udevadm', 'info', '--path=%s' % udi, '--query=property']
     with open('/dev/null', 'w') as devnull:
-        out = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=devnull)
+        out = subprocess.Popen(
+            cmd, stdout=subprocess.PIPE, stderr=devnull,
+            universal_newlines=True)
         out = out.communicate()
     if not out[1]:
         for prop in out[0].split('\n'):
